--- a/packages.config
+++ b/packages.config
@@ -3,4 +3,5 @@
   <package id="AvalonEdit" version="5.0.4" targetFramework="net452" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.6.0-alpha0184" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
 </packages>
